fix image vertical height problem on safari

--- a/static/css/pages/common.css
+++ b/static/css/pages/common.css
@@ -95,6 +95,10 @@ h1 {
   background: linear-gradient(0deg, rgba(0,0,0,0.7) 21%, rgba(0,0,0,0) 44%);
 }
 
+.align-self-center {
+  align-self: center
+}
+
 .w-201 {
   width: 201px;
 }
